--- a/src/pages/login/styles.module.css
+++ b/src/pages/login/styles.module.css
@@ -1,6 +1,7 @@
 .mainContainer {
   background-color: #b5c2ca;
   height: 100vh;
+  width: 100%;
   display: grid;
   place-items: center;
 }
@@ -16,13 +17,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .containerLogoTitle {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 1rem;
 }
 
 .containerLogoTitle > img {
@@ -32,4 +34,55 @@
 .titleService {
   font-weight: 100;
   color: #081225;
+}
+
+.forgetPass {
+  color: #081225;
+}
+
+.containerBtnForgetPass {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+.containerBtnForgetPass > p {
+  margin-top: 1rem;
+}
+
+@media (max-width: 780px) {
+  .mainContainer{
+    width: 180%; 
+    height: 180vh; 
+  }
+
+  .containerLogin {
+    width: 20.688rem;
+    height: 25.563rem;
+  }
+  .containerLogoTitle {
+    margin-top: 37px;
+    margin-bottom: 20px;
+  }
+
+  .containerLogoTitle > img {
+    width: 35px;
+    height: 35px;
+  }
+
+  .containerLogoTitle > h1 {
+    font-size: 14;
+  }
+
+  .containerInputs {
+    width: 20.688rem;
+    height: 20.563rem;
+    padding-left: 2rem;
+  }
+
+  .containerBtnForgetPass {
+    margin-top: 37px;
+  }
 }
