--- a/src/components/input/styles.module.css
+++ b/src/components/input/styles.module.css
@@ -24,6 +24,22 @@
   margin-left: 0.8rem;
 }
 
+.versionOne {
+  font-weight: bold;
+  font-size: larger;
+  margin-bottom: 0.5rem;
+  margin-left: 0.8rem;
+}
+
+.versionTwo {
+  text-align: left;
+  font-size: medium;
+  margin-bottom: 0.3rem;
+  margin-left: 0.9rem;
+  font-weight: 100;
+  color: #6A7175;
+}
+
 @media (max-width: 780px) {
   .input {
     width: 250px;
