--- a/src/components/modal/styles.module.css
+++ b/src/components/modal/styles.module.css
@@ -17,8 +17,8 @@
 }
 
 .modal {
-  width: 250px;
-  height: 170px;
+  width: 580px;
+  height: 600px;
   background: white;
   color: white;
   z-index: 10;
@@ -44,7 +44,8 @@
 }
 
 .modalContent {
-  padding: 10px;
+  padding-left: 2rem;
+  padding-right: 2rem;
   font-size: 14px;
   color: #2c3e50;
   text-align: center;
@@ -123,4 +124,12 @@
   box-shadow: none;
   transform: none;
   background: whitesmoke;
+}
+
+.wrappInputs {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
 }
