--- a/src/components/sidebar/components/user_info/styles.module.css
+++ b/src/components/sidebar/components/user_info/styles.module.css
@@ -13,6 +13,9 @@
   font-size: large;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+  text-overflow: ellipsis;
+  text-align: center;
+  width: 8rem;
 }
 
 .email {
@@ -20,6 +23,10 @@
   padding: 0px;
   margin: 0px;
   margin-bottom: 0.5rem;
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 8rem;
 }
 
 .sair {
