--- a/src/components/tableinfo/components/table_servico/styles.module.css
+++ b/src/components/tableinfo/components/table_servico/styles.module.css
@@ -2,24 +2,27 @@
   border-collapse: collapse;
   width: 100%;
   max-height: 600px;
-  overflow-y: auto;
   margin-top: 1rem;
 }
 
-.tableContainer > th {
+.tableContainer > theader > th {
   background-color: #6ca6c1;
   padding: 1rem;
 }
 
-.tableContainer > tr > td {
+.tableContainer > tbody > tr > td {
   text-align: center;
   padding: 1rem;
 }
 
-.tableContainer > tr:nth-child(odd) {
+.tableContainer > tbody {
+  overflow-y: auto;
+}
+
+.tableContainer > tbody > tr:nth-child(odd) {
   background-color: rgb(207, 197, 197);
 }
 
-.tableContainer > tr {
+.tableContainer > tbody > tr {
   cursor: pointer;
 }
